--- a/src/index.html
+++ b/src/index.html
@@ -3,21 +3,212 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<title>Start here</title>
+	<title>iT Service Group - Компексный IT аутсорсинг в Караганде</title>
 	<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css"> -->
-	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-	<header></header>
-<div class="one">
-	<a href="#" class="btn1">Go to bot</a>
-</div>
+	<header class="header">
+		<div class="wrapper">
+			<div class="content">
+				<div class="container">
+					<div class="header__row">
+						<ul class="header__menu">
+							<li><a href="#"><img src="img/logox2.jpg" alt="logo"></a></li>
+							<li><a href="#">Услуги</a></li>
+							<li><a href="#">Контакты</a></li>
+						</ul>
+						<div class="header__btns">
+							<div class="header__btns_wrap">
+								<a href="#" class="header__btns_call">Позвонить</a>
+							</div>
+							<div class="header__btns_wrap">
+								<a href="#" class="header__btns_msg">Написать</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</header>
 
-<div class="two">
-	<a href="#" class="btn2">Go to top</a>
-</div>
+	<div class="wrapper">
+		<div class="content">
+			<div class="hero">
+				<div class="container">
+					<div class="hero__row">
+						<div class="hero__text">
+							<p class="subtitle">Комплексный</p>
+							<h1 class="title">
+								<span class="title__accent">IT</span>
+								аутсорсинг
+							</h1>
+							<p class="subtitle">для малого и среднего бизнеса</p>
+							<a href="#" class="hero__btn btn">Узнать больше</a>
+						</div>
+						<ul class="hero__links">
+							<li>
+								<a href="#" class="hero__card">
+									<div class="hero__card_wrapper">
+										<img src="img/icons/monitor.png" alt="pc">
+										Обслуживание компьютеров
+									</div>
+									<img src="img/icons/arrow.jpg" alt="link">
+								</a>
+							</li>
+							<li>
+								<a href="#" class="hero__card">
+									<div class="hero__card_wrapper">
+										<img src="img/icons/server.png" alt="server">
+										Обслуживание серверов
+									</div>
+									<img src="img/icons/arrow.jpg" alt="link">
+								</a>
+							</li>
+							<li>
+								<a href="#" class="hero__card">
+									<div class="hero__card_wrapper">
+										<img src="img/icons/phone.png" alt="ATC">
+										iP Телефония
+									</div>
+									<img src="img/icons/arrow.jpg" alt="link">
+								</a>
+							</li>
+							<li>
+								<a href="#" class="hero__card">
+									<div class="hero__card_wrapper">
+										<img src="img/icons/group.png" alt="All">
+										Все услуги
+									</div>
+									<img src="img/icons/arrow.jpg" alt="link">
+								</a>
+							</li>
+						</ul>
+						<svg class="blob__first" width="200" height="200" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<path
+								d="M141.1 44.2c15.1 10.3 32.4 18.3 41.4 32.3 9.1 13.9 10 33.9 4.1 51.6-5.9 17.6-18.4 33-34 36.7-15.5 3.7-34.1-4.3-48.6-9.7-14.6-5.5-25.3-8.3-34.1-14.2-8.7-5.9-15.7-14.8-22.5-26.1-6.9-11.3-13.7-24.9-13.2-39.2.4-14.3 8.1-29.3 20.3-40.6 12.2-11.2 28.9-18.7 43.7-16.2 14.8 2.5 27.7 15.1 42.9 25.4z"
+								fill="#EF7F1A" /></svg>
+						<svg class="blob__second" width="200" height="200" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<path
+								d="M145 38.6c15.4 10.7 31.4 21 36.7 35.4 5.4 14.3.1 32.6-5.6 50.9-5.7 18.3-11.8 36.7-24.6 43.7-12.7 6.9-32.1 2.5-50.2.7-18.2-1.7-35-.7-49.5-7.1-14.4-6.4-26.5-20.2-28.5-35.2-2-15 6-31.2 14.1-44.7 8-13.5 16-24.4 26.5-36.7 10.4-12.3 23.3-26 37.1-27.4 13.8-1.3 28.6 9.7 44 20.4z"
+								fill="#EF7F1A" /></svg>
+					</div>
+				</div>
+			</div>
+			<div class="about">
+				<div class="container">
+					<div class="about__row">
+						<p class="subtitle">
+							Преимущества
+						</p>
+						<h1 class="title">
+							<span class="title__accent">it</span>
+							аутсорсинг
+						</h1>
+						<p class="about__text">
+							Наша компания предлагает комплексные решения на базе аутсорсинга. Аутсорсинг - замена штатного системного администратора
+							на квалифицированных специалистов iT Service Group. Главное преимущество заключается в существенной оптимизации
+							финансовых затрат. Поиск и обучение штатного сотрудника, ежемесячная оплата и повышение квалификации достаточно
+							затратно.
+						</p>
+						<a href="#" class="about__link">
+							Давайте сравним затраты обслуживания компьютеров
+							<img src="img/icons/arrow.jpg" alt="link">
+						</a>
+					</div>
+				</div>
+			</div>
+			<div class="comparison">
+				<div class="container">
+					<div class="comparison__row">
+						<div class="comparison__card comparison__card_active">
+							<div class="comparison__item">
+								<img src="img/logo.jpg" alt="logo">
+							</div>
+							<div class="comparison__item">
+								<img src="img/icons/checkbox.svg" alt="checked">
+								<p class="comparison__text">Опытные специалисты</p>
+							</div>
+							<div class="comparison__item">
+								<img src="img/icons/checkbox.svg" alt="checked">
+								<p class="comparison__text">Профессиональное оборудование</p>
+							</div>
+							<div class="comparison__item">
+								<img src="img/icons/checkbox.svg" alt="checked">
+								<p class="comparison__text">Конфиденциальность</p>
+							</div>
+							<div class="comparison__item">
+								<img src="img/icons/checkbox.svg" alt="checked">
+								<p class="comparison__text">Оперативная работа</p>
+							</div>
+							<div class="comparison__item">
+								<img src="img/icons/checkbox.svg" alt="checked">
+								<p class="comparison__text">Доступная цена</p>
+							</div>
+							<div class="comparison__price">
+								<p class="comparison__text">
+									от <span class="comparison__price_accent">1900 тенге / 1 ПК</span>
+								</p>
+								<p class="comparison__text">в месяц</p>
+							</div>
+							<a href="#" class="comparison__btn comparison__btn_hover">Бесплатная консультация</a>
+						</div>
+						<div class="comparison__card">
+							<div class="comparison__item">
+								<p class="comparison__text comparison__text_title">Штатный сотрудник</p>
+							</div>
+							<div class="comparison__item">
+								<svg width="24" height="24" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path
+										d="M21.188 24H2.813A2.816 2.816 0 010 21.187V2.813A2.816 2.816 0 012.813 0h18.375A2.816 2.816 0 0124 2.813v18.375A2.816 2.816 0 0121.187 24zM2.813 1.875a.939.939 0 00-.938.938v18.375c0 .516.42.937.938.937h18.375c.516 0 .937-.42.937-.938V2.813a.939.939 0 00-.938-.937H2.813zm17.385 5.22l-1.396-1.252-8.67 9.683-5.033-4.783L3.807 12.1l6.432 6.115L20.2 7.094z"
+										fill="#DADCE0" /></svg>
+								<p class="comparison__text">Поиск опытного сотрудника</p>
+							</div>
+							<div class="comparison__item">
+								<svg width="24" height="24" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path
+										d="M21.188 24H2.813A2.816 2.816 0 010 21.187V2.813A2.816 2.816 0 012.813 0h18.375A2.816 2.816 0 0124 2.813v18.375A2.816 2.816 0 0121.187 24zM2.813 1.875a.939.939 0 00-.938.938v18.375c0 .516.42.937.938.937h18.375c.516 0 .937-.42.937-.938V2.813a.939.939 0 00-.938-.937H2.813zm17.385 5.22l-1.396-1.252-8.67 9.683-5.033-4.783L3.807 12.1l6.432 6.115L20.2 7.094z"
+										fill="#DADCE0" /></svg>
+								<p class="comparison__text">Обустройство рабочего места</p>
+							</div>
+							<div class="comparison__item">
+								<svg width="24" height="24" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path
+										d="M21.188 24H2.813A2.816 2.816 0 010 21.187V2.813A2.816 2.816 0 012.813 0h18.375A2.816 2.816 0 0124 2.813v18.375A2.816 2.816 0 0121.187 24zM2.813 1.875a.939.939 0 00-.938.938v18.375c0 .516.42.937.938.937h18.375c.516 0 .937-.42.937-.938V2.813a.939.939 0 00-.938-.937H2.813zm17.385 5.22l-1.396-1.252-8.67 9.683-5.033-4.783L3.807 12.1l6.432 6.115L20.2 7.094z"
+										fill="#DADCE0" /></svg>
+								<p class="comparison__text">Могут переманить конкуренты</p>
+							</div>
+							<div class="comparison__item">
+								<svg width="24" height="24" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path
+										d="M21.188 24H2.813A2.816 2.816 0 010 21.187V2.813A2.816 2.816 0 012.813 0h18.375A2.816 2.816 0 0124 2.813v18.375A2.816 2.816 0 0121.187 24zM2.813 1.875a.939.939 0 00-.938.938v18.375c0 .516.42.937.938.937h18.375c.516 0 .937-.42.937-.938V2.813a.939.939 0 00-.938-.937H2.813zm17.385 5.22l-1.396-1.252-8.67 9.683-5.033-4.783L3.807 12.1l6.432 6.115L20.2 7.094z"
+										fill="#DADCE0" /></svg>
+								<p class="comparison__text">Может уйти на больничный</p>
+							</div>
+							<div class="comparison__item">
+								<svg width="24" height="24" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path
+										d="M21.188 24H2.813A2.816 2.816 0 010 21.187V2.813A2.816 2.816 0 012.813 0h18.375A2.816 2.816 0 0124 2.813v18.375A2.816 2.816 0 0121.187 24zM2.813 1.875a.939.939 0 00-.938.938v18.375c0 .516.42.937.938.937h18.375c.516 0 .937-.42.937-.938V2.813a.939.939 0 00-.938-.937H2.813zm17.385 5.22l-1.396-1.252-8.67 9.683-5.033-4.783L3.807 12.1l6.432 6.115L20.2 7.094z"
+										fill="#DADCE0" /></svg>
+								<p class="comparison__text">Заработная плата / премии / отпуск</p>
+							</div>
+							<div class="comparison__price comparison__price_width">
+								<p class="comparison__text">
+									от <span class="comparison__price_gray">150.000 тенге зарплата</span>
+								</p>
+								<p class="comparison__text">в месяц</p>
+							</div>
+							<a href="#" class="comparison__btn comparison__btn_gray">Большие расходы</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
 
 	<footer>
 		
