swiper slider complete

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
 	<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css"> -->
 	<link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -202,6 +203,77 @@
 								<p class="comparison__text">в месяц</p>
 							</div>
 							<a href="#" class="comparison__btn comparison__btn_gray">Большие расходы</a>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="clients">
+				<div class="container">
+					<div class="clients__row">
+						<div class="clients__title">
+							<p class="subtitle">С нами уже работают</p>
+							<h1 class="title">
+								Наши
+								<span class="title__accent">клиенты</span>
+							</h1>
+						</div>
+						<div class="swiper">
+							<div class="swiper__left">
+								<img src="img/icons/arrow.jpg" alt="left">
+							</div>
+							<div class="swiper__body">
+								<div class="swiper__item">
+									<img src="img/fix_price.png" alt="fixprice">
+								</div>
+								<div class="swiper__item">
+									<img src="img/fix_price.png" alt="fixprice">
+								</div>
+								<div class="swiper__item">
+									<img src="img/fix_price.png" alt="fixprice">
+								</div>
+								<div class="swiper__item">
+									<img src="img/fix_price.png" alt="fixprice">
+								</div>
+							</div>
+							<div class="swiper__right">
+								<img src="img/icons/arrow.jpg" alt="right">
+							</div>
+						</div>
+						<div class="slider-container">
+							<div class="swiper-button-prev"></div>
+							<div class="swiper-container">
+								<div class="swiper-wrapper">
+									<div class="swiper-slide">
+										<img data-src="img/fix_price.png" class="swiper-lazy" alt="">
+										<div class="swiper-lazy-preloader"></div>
+									</div>
+									<div class="swiper-slide">
+										<img data-src="img/fix_price.png" class="swiper-lazy" alt="">
+										<div class="swiper-lazy-preloader"></div>
+									</div>
+									<div class="swiper-slide">
+										<img data-src="img/fix_price.png" class="swiper-lazy" alt="">
+										<div class="swiper-lazy-preloader"></div>
+									</div>
+									<div class="swiper-slide">
+										<img data-src="img/fix_price.png" class="swiper-lazy" alt="">
+										<div class="swiper-lazy-preloader"></div>
+									</div>
+									<div class="swiper-slide">
+										<img data-src="img/fix_price.png" class="swiper-lazy" alt="">
+										<div class="swiper-lazy-preloader"></div>
+									</div>
+									<div class="swiper-slide">
+										<img data-src="img/fix_price.png" class="swiper-lazy" alt="">
+										<div class="swiper-lazy-preloader"></div>
+									</div>
+									<div class="swiper-slide">
+										<img data-src="img/fix_price.png" class="swiper-lazy" alt="">
+										<div class="swiper-lazy-preloader"></div>
+									</div>
+								</div>
+							</div>
+							<div class="swiper-button-next"></div>
 						</div>
 					</div>
 				</div>
