--- a/src/parts/scripts.html
+++ b/src/parts/scripts.html
@@ -1,4 +1,4 @@
  <section>
- 	<script src="js/libs.min.js"></script>
+	<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
  	<script src="js/common.js"></script>
  </section>
