--- a/src/index.html
+++ b/src/index.html
@@ -19,15 +19,15 @@
 					<div class="header__row">
 						<ul class="header__menu">
 							<li><a href="#"><img src="img/logox2.jpg" alt="logo"></a></li>
-							<li><a href="#">Услуги</a></li>
-							<li><a href="#">Контакты</a></li>
+							<li><a href="#services">Услуги</a></li>
+							<!-- <li><a href="#">Контакты</a></li> -->
 						</ul>
 						<div class="header__btns">
 							<div class="header__btns_wrap">
-								<a href="#" class="header__btns_call">Позвонить</a>
+								<a href="tel:+77071337133" class="header__btns_call">Позвонить</a>
 							</div>
 							<div class="header__btns_wrap">
-								<a href="#" class="header__btns_msg">Написать</a>
+								<a href="https://api.whatsapp.com/send?phone=77714715198&amp;text=Здравствуйте, я хочу получить консультацию по IT аутсорсингу." class="header__btns_msg">Написать</a>
 							</div>
 						</div>
 					</div>
@@ -50,10 +50,10 @@
 							<p class="subtitle">для малого и среднего бизнеса</p>
 							<a href="#" class="hero__btn btn">Узнать больше</a>
 						</div>
-						<ul class="hero__links">
+						<ul class="links">
 							<li>
-								<a href="#" class="hero__card">
-									<div class="hero__card_wrapper">
+								<a href="/service-pc.html" class="links__card">
+									<div class="links__card_wrapper">
 										<img src="img/icons/monitor.png" alt="pc">
 										Обслуживание компьютеров
 									</div>
@@ -61,17 +61,17 @@
 								</a>
 							</li>
 							<li>
-								<a href="#" class="hero__card">
-									<div class="hero__card_wrapper">
+								<a href="/service-web-kassa.html" class="links__card">
+									<div class="links__card_wrapper">
 										<img src="img/icons/server.png" alt="server">
-										Обслуживание серверов
+										Web-касса
 									</div>
 									<img src="img/icons/arrow.jpg" alt="link">
 								</a>
 							</li>
 							<li>
-								<a href="#" class="hero__card">
-									<div class="hero__card_wrapper">
+								<a href="/service-ip-phone.html" class="links__card">
+									<div class="links__card_wrapper">
 										<img src="img/icons/phone.png" alt="ATC">
 										iP Телефония
 									</div>
@@ -79,8 +79,8 @@
 								</a>
 							</li>
 							<li>
-								<a href="#" class="hero__card">
-									<div class="hero__card_wrapper">
+								<a href="#" class="links__card hero-services-link">
+									<div class="links__card_wrapper">
 										<img src="img/icons/group.png" alt="All">
 										Все услуги
 									</div>
@@ -96,6 +96,102 @@
 							<path
 								d="M145 38.6c15.4 10.7 31.4 21 36.7 35.4 5.4 14.3.1 32.6-5.6 50.9-5.7 18.3-11.8 36.7-24.6 43.7-12.7 6.9-32.1 2.5-50.2.7-18.2-1.7-35-.7-49.5-7.1-14.4-6.4-26.5-20.2-28.5-35.2-2-15 6-31.2 14.1-44.7 8-13.5 16-24.4 26.5-36.7 10.4-12.3 23.3-26 37.1-27.4 13.8-1.3 28.6 9.7 44 20.4z"
 								fill="#EF7F1A" /></svg>
+					</div>
+				</div>
+			</div>
+			<div class="location">
+				<div class="container">
+					<div class="location__row">
+						<div class="title-block">
+							<p class="subtitle">Работаем по всему Казахстану</p>
+							<h1 class="title">
+								Наша
+								<span class="title__accent">география</span>
+							</h1>
+						</div>
+						<p class="location__text">
+							Наша компания предлагает комплексные решения на базе аутсорсинга. Аутсорсинг - замена штатного системного администратора
+							на квалифицированных специалистов iT Service Group. Главное преимущество заключается в существенной оптимизации
+							финансовых затрат. Поиск и обучение штатного сотрудника, ежемесячная оплата и повышение квалификации достаточно
+							затратно.
+						</p>
+						<div class="about__link">
+							География наших клиентов, которым мы ежедневно помогаем решать IT задачи
+							<img src="img/icons/arrow.jpg" alt="link">
+						</div>
+						<div class="advantages">
+							<div class="advantages__stat">
+								<div class="advantages__item">
+									<span class="advantages__num">10+</span>
+									<p class="advantages__text">лет на рынке</p>
+								</div>
+								<div class="advantages__item">
+									<span class="advantages__num">6</span>
+									<p class="advantages__text">регионов Казахстана</p>
+								</div>
+								<div class="advantages__item">
+									<span class="advantages__num">17</span>
+									<p class="advantages__text">городов</p>
+								</div>
+							</div>
+							<div class="advantages__map">
+								<img src="img/map_retina.png" alt="map">
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="bonus">
+				<div class="container">
+					<div class="bonus__row">
+						<div class="title-block">
+							<p class="subtitle">При заключении договора</p>
+							<h1 class="title">
+								Наши
+								<span class="title__accent">бонусы</span>
+							</h1>
+						</div>
+						<p class="bonus__text">
+							При заключении договора более чем на 1 год, мы предоставляем бонусы для первого руководителя и сотрудников компании
+						</p>
+						<div class="bonus-cards">
+							<div class="bonus-cards__row">
+								<div class="bonus-cards__item">
+									<h4 class="bonus-cards__title">Обслуживание домашнего
+									ПК руководителя</h4>
+									<p class="bonus-cards__text">
+										Полное обслуживание домашнего ПК и
+										принтера руководителя организации
+									</p>
+								</div>
+								<div class="bonus-cards__item">
+									<h4 class="bonus-cards__title">Бесплатная заправка
+									картриджей</h4>
+									<p class="bonus-cards__text">
+										При заключении договора на 1 год, мы
+										заправляем все картриджи бесплатно
+									</p>
+								</div>
+							</div>
+							<div class="bonus-cards__row">
+								<div class="bonus-cards__item">
+									<h4 class="bonus-cards__title">Бесплатный домен и
+									хостинг</h4>
+									<p class="bonus-cards__text">
+										Дарим домен и хостинг на 1 год при заказе
+										разработки сайта
+									</p>
+								</div>
+								<div class="bonus-cards__item">
+									<h4 class="bonus-cards__title">Скидки на обслуживание
+									домашних ПК</h4>
+									<p class="bonus-cards__text">
+										Предоставлем скидки на ремонт
+										домашних ПК сотрудникам организации
+									</p>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -115,10 +211,10 @@
 							финансовых затрат. Поиск и обучение штатного сотрудника, ежемесячная оплата и повышение квалификации достаточно
 							затратно.
 						</p>
-						<a href="#" class="about__link">
+						<div class="about__link">
 							Давайте сравним затраты обслуживания компьютеров
 							<img src="img/icons/arrow.jpg" alt="link">
-						</a>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -127,7 +223,7 @@
 					<div class="comparison__row">
 						<div class="comparison__card comparison__card_active">
 							<div class="comparison__item">
-								<img src="img/logo.jpg" alt="logo">
+								<img src="img/logox2.jpg" alt="logo" style="width: 167px;">
 							</div>
 							<div class="comparison__item">
 								<img src="img/icons/checkbox.svg" alt="checked">
@@ -217,59 +313,27 @@
 								<span class="title__accent">клиенты</span>
 							</h1>
 						</div>
-						<div class="swiper">
-							<div class="swiper__left">
-								<img src="img/icons/arrow.jpg" alt="left">
-							</div>
-							<div class="swiper__body">
-								<div class="swiper__item">
-									<img src="img/fix_price.png" alt="fixprice">
-								</div>
-								<div class="swiper__item">
-									<img src="img/fix_price.png" alt="fixprice">
-								</div>
-								<div class="swiper__item">
-									<img src="img/fix_price.png" alt="fixprice">
-								</div>
-								<div class="swiper__item">
-									<img src="img/fix_price.png" alt="fixprice">
-								</div>
-							</div>
-							<div class="swiper__right">
-								<img src="img/icons/arrow.jpg" alt="right">
-							</div>
-						</div>
 						<div class="slider-container">
 							<div class="swiper-button-prev"></div>
 							<div class="swiper-container">
 								<div class="swiper-wrapper">
 									<div class="swiper-slide">
-										<img data-src="img/fix_price.png" class="swiper-lazy" alt="">
-										<div class="swiper-lazy-preloader"></div>
+										<img src="img/slider/slider-1.jpg" alt="AlemGaz">
 									</div>
 									<div class="swiper-slide">
-										<img data-src="img/fix_price.png" class="swiper-lazy" alt="">
-										<div class="swiper-lazy-preloader"></div>
+										<img src="img/slider/slider-6.jpg" alt="KOTON">
 									</div>
 									<div class="swiper-slide">
-										<img data-src="img/fix_price.png" class="swiper-lazy" alt="">
-										<div class="swiper-lazy-preloader"></div>
+										<img src="img/slider/slider-3.png" alt="FixPrice">
 									</div>
 									<div class="swiper-slide">
-										<img data-src="img/fix_price.png" class="swiper-lazy" alt="">
-										<div class="swiper-lazy-preloader"></div>
+										<img src="img/slider/slider-4.jpg" alt="GloriaJeans">
 									</div>
 									<div class="swiper-slide">
-										<img data-src="img/fix_price.png" class="swiper-lazy" alt="">
-										<div class="swiper-lazy-preloader"></div>
+										<img src="img/slider/slider-5.jpg" alt="OrhunMedical">										
 									</div>
 									<div class="swiper-slide">
-										<img data-src="img/fix_price.png" class="swiper-lazy" alt="">
-										<div class="swiper-lazy-preloader"></div>
-									</div>
-									<div class="swiper-slide">
-										<img data-src="img/fix_price.png" class="swiper-lazy" alt="">
-										<div class="swiper-lazy-preloader"></div>
+										<img src="img/slider/slider-2.jpg" alt="GalaKlinica">
 									</div>
 								</div>
 							</div>
@@ -278,13 +342,78 @@
 					</div>
 				</div>
 			</div>
+			<div class="services" id="services">
+				<div class="services__row">
+						<a href="/service-pc.html" class="services__item" style="background-image: url(img/services/services-1.jpg);">
+							<span>Обслуживание компьютеров и<br>периферийных устройств</span>
+						</a>
+						<a href="/service-1c.html" class="services__item" style="background-image: url(img/services/services-2.jpg);">
+							<span>Настройка 1с</span>
+						</a>
+						<a href="/service-ip-phone.html" class="services__item" style="background-image: url(img/services/services-3.jpg);">
+							<span>IP телефония</span>
+						</a>
+						<a href="service-network.html" class="services__item" style="background-image: url(img/services/services-4.jpg);">
+							<span>Монтажные работы</span>
+						</a>
+						<a href="service-server.html" class="services__item" style="background-image: url(img/services/services-5.jpg);">
+							<span>Обслуживание серверов</span>
+						</a>
+						<a href="service-printer.html" class="services__item" style="background-image: url(img/services/services-6.jpg);">
+							<span>Заправка</span>
+							<span>Ремонт</span>
+							<span>Картриджей</span>
+						</a>
+						<a href="https://simpleweb.kz/" target="_blank" class="services__item" style="background-image: url(img/services/services-7.jpg);">
+							<span>Разработка сайтов</span>
+						</a>
+						<a href="service-pc-craft.html" class="services__item" style="background-image: url(img/services/services-8.jpg);">
+							<span>Сборка компьютеров и<br>серверов</span>
+						</a>
+						<a href="service-web-kassa.html" class="services__item" style="background-image: url(img/services/services-9.jpg);">
+							<span>Web-касса и торговое оборудование</span>
+						</a>
+					</a>
+				</div>
+			</div>
+			<div class="feedback">
+				<div class="container">
+					<div class="feedback__row">
+						<div class="feedback__map">
+							<div class="feedback__img">
+								<img src="img/feedback/map.jpg" srcset="img/feedback/map-retina.jpg 2x" alt="map">
+							</div>
+							<a href="https://2gis.kz/karaganda/search/%D0%9A%D0%BE%D0%BC%D0%B8%D1%81%D1%81%D0%B0%D1%80%D0%BE%D0%B2%D0%B0%2036/geo/11822584677009435/73.0867%2C49.799065?m=73.086487%2C49.799142%2F19.24" target="_blank" class="feedback__map-link">Открыть в 2gis</a>
+							<div class="feedback__success">
+								Сообщение успешно отправлено!
+							</div>
+						</div>
+						<form class="feedback__form">
+							<div class="feedback__title">
+								<h1 class="title">Давайте <span class="title__accent">обсудим</span></h1>
+							</div>
+							<input type="text" class="feedback__text-field" placeholder="Ваше имя *" required>
+							<input type="text" class="feedback__text-field" placeholder="Ваш телефон *" required>
+							<button class="feedback__btn">Отправить</button>
+							<div class="feedback__policy">
+								<img src="img/icons/checkbox.svg" alt="Checkbox">
+								<p class="feedback__text">Согласен на обработку персональных данных</p>
+							</div>
+						</form>
+					</div>
+				</div>
+			</div>
 		</div>
+			<include src="src/parts/footer.html"></include>
+	</div>
+
+	<div class="mobile-links">
+		<a href="https://api.whatsapp.com/send?phone=77714715198&amp;text=Здравствуйте, я хочу получить консультацию по IT аутсорсингу." class="mobile-link mobile-link_msg">Написать</a>
+		<a href="tel:+77071337133" class="mobile-link mobile-link_call">Позвонить</a>
 	</div>
 
 
-	<footer>
-		
-	</footer>
+
 	<include src="src/parts/scripts.html"></include>
 </body>
 </html>
