--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,10 @@
 	<link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+	<link rel="manifest" href="site.webmanifest">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -19,8 +23,7 @@
 					<div class="header__row">
 						<ul class="header__menu">
 							<li><a href="#"><img src="img/logox2.jpg" alt="logo"></a></li>
-							<li><a href="#services">Услуги</a></li>
-							<!-- <li><a href="#">Контакты</a></li> -->
+							<p class="header__subtitle">Техническая поддержка Ваших достежений!</p>
 						</ul>
 						<div class="header__btns">
 							<div class="header__btns_wrap">
@@ -47,44 +50,44 @@
 								<span class="title__accent">IT</span>
 								аутсорсинг
 							</h1>
-							<p class="subtitle">для малого и среднего бизнеса</p>
-							<a href="#" class="hero__btn btn">Узнать больше</a>
+							<p class="subtitle">для вашего бизнеса</p>
+							<a href="#" class="hero__btn btn scroll-anch" data-target="#loc">Узнать больше</a>
 						</div>
 						<ul class="links">
 							<li>
-								<a href="/service-pc.html" class="links__card">
+								<a href="service-pc.html" class="links__card">
 									<div class="links__card_wrapper">
-										<img src="img/icons/monitor.png" alt="pc">
-										Обслуживание компьютеров
+										<img src="img/icons/monitor.png" srcset="img/icons/monitor-retina.png 2x" alt="pc">
+										Автоматизация торговли
 									</div>
-									<img src="img/icons/arrow.jpg" alt="link">
+									<img src="img/icons/arrow.png" srcset="img/icons/arrow-retina.png 2x" alt="link">
 								</a>
 							</li>
 							<li>
-								<a href="/service-web-kassa.html" class="links__card">
+								<a href="service-1c.html" class="links__card">
 									<div class="links__card_wrapper">
-										<img src="img/icons/server.png" alt="server">
+										<img src="img/icons/server.png" srcset="img/icons/server-retina.png 2x" alt="server">
+										1с Бухгалтерия / Торговля
+									</div>
+									<img src="img/icons/arrow.png" srcset="img/icons/arrow-retina.png 2x" alt="link">
+								</a>
+							</li>
+							<li>
+								<a href="service-web-kassa.html" class="links__card">
+									<div class="links__card_wrapper">
+										<img src="img/icons/cart.png" srcset="img/icons/cart-retina.png 2x" alt="Cart">
 										Web-касса
 									</div>
-									<img src="img/icons/arrow.jpg" alt="link">
+									<img src="img/icons/arrow.png" srcset="img/icons/arrow-retina.png 2x" alt="link">
 								</a>
 							</li>
 							<li>
-								<a href="/service-ip-phone.html" class="links__card">
+								<a href="" class="links__card scroll-anch" data-target="#services">
 									<div class="links__card_wrapper">
-										<img src="img/icons/phone.png" alt="ATC">
-										iP Телефония
-									</div>
-									<img src="img/icons/arrow.jpg" alt="link">
-								</a>
-							</li>
-							<li>
-								<a href="#" class="links__card hero-services-link">
-									<div class="links__card_wrapper">
-										<img src="img/icons/group.png" alt="All">
+										<img src="img/icons/group.png" srcset="img/icons/group-retina.png 2x" alt="All">
 										Все услуги
 									</div>
-									<img src="img/icons/arrow.jpg" alt="link">
+									<img src="img/icons/arrow.png" srcset="img/icons/arrow-retina.png 2x" alt="link">
 								</a>
 							</li>
 						</ul>
@@ -99,7 +102,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="location">
+			<div class="location" id="loc">
 				<div class="container">
 					<div class="location__row">
 						<div class="title-block">
@@ -111,13 +114,11 @@
 						</div>
 						<p class="location__text">
 							Наша компания предлагает комплексные решения на базе аутсорсинга. Аутсорсинг - замена штатного системного администратора
-							на квалифицированных специалистов iT Service Group. Главное преимущество заключается в существенной оптимизации
-							финансовых затрат. Поиск и обучение штатного сотрудника, ежемесячная оплата и повышение квалификации достаточно
-							затратно.
+							на квалифицированных специалистов iT Service Group. Мы успешно работаем на протяжении уже более десяти лет в 6 регионах Казахстана.
 						</p>
 						<div class="about__link">
 							География наших клиентов, которым мы ежедневно помогаем решать IT задачи
-							<img src="img/icons/arrow.jpg" alt="link">
+							<!-- <img src="img/icons/arrow.png" srcset="img/icons/arrow-retina.png 2x" alt="link"> -->
 						</div>
 						<div class="advantages">
 							<div class="advantages__stat">
@@ -130,8 +131,8 @@
 									<p class="advantages__text">регионов Казахстана</p>
 								</div>
 								<div class="advantages__item">
-									<span class="advantages__num">17</span>
-									<p class="advantages__text">городов</p>
+									<span class="advantages__num">22</span>
+									<p class="advantages__text">города</p>
 								</div>
 							</div>
 							<div class="advantages__map">
@@ -145,23 +146,21 @@
 				<div class="container">
 					<div class="bonus__row">
 						<div class="title-block">
-							<p class="subtitle">При заключении договора</p>
+							<p class="subtitle">Почему мы</p>
 							<h1 class="title">
-								Наши
-								<span class="title__accent">бонусы</span>
+								С нами
+								<span class="title__accent">выгодно</span>
 							</h1>
 						</div>
 						<p class="bonus__text">
-							При заключении договора более чем на 1 год, мы предоставляем бонусы для первого руководителя и сотрудников компании
+							Заключая договор с нами, вы получаете:
 						</p>
 						<div class="bonus-cards">
 							<div class="bonus-cards__row">
 								<div class="bonus-cards__item">
-									<h4 class="bonus-cards__title">Обслуживание домашнего
-									ПК руководителя</h4>
+									<h4 class="bonus-cards__title">Оптовые цены на оборудование и ПО</h4>
 									<p class="bonus-cards__text">
-										Полное обслуживание домашнего ПК и
-										принтера руководителя организации
+										Мы являемся официальными партнерами Microsoft, Kaspersky, 1C и других компаний
 									</p>
 								</div>
 								<div class="bonus-cards__item">
@@ -178,16 +177,16 @@
 									<h4 class="bonus-cards__title">Бесплатный домен и
 									хостинг</h4>
 									<p class="bonus-cards__text">
-										Дарим домен и хостинг на 1 год при заказе
+										Дарим домен и хостинг на весь период сотрудничества при заказе
 										разработки сайта
 									</p>
 								</div>
 								<div class="bonus-cards__item">
-									<h4 class="bonus-cards__title">Скидки на обслуживание
-									домашних ПК</h4>
+									<h4 class="bonus-cards__title">Обслуживание домашнего
+										ПК руководителя</h4>
 									<p class="bonus-cards__text">
-										Предоставлем скидки на ремонт
-										домашних ПК сотрудникам организации
+										Полное обслуживание домашнего ПК и
+										принтера руководителя организации
 									</p>
 								</div>
 							</div>
@@ -195,7 +194,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="about">
+			<div class="about" id="about">
 				<div class="container">
 					<div class="about__row">
 						<p class="subtitle">
@@ -208,12 +207,11 @@
 						<p class="about__text">
 							Наша компания предлагает комплексные решения на базе аутсорсинга. Аутсорсинг - замена штатного системного администратора
 							на квалифицированных специалистов iT Service Group. Главное преимущество заключается в существенной оптимизации
-							финансовых затрат. Поиск и обучение штатного сотрудника, ежемесячная оплата и повышение квалификации достаточно
-							затратно.
+							финансовых затрат.
 						</p>
 						<div class="about__link">
 							Давайте сравним затраты обслуживания компьютеров
-							<img src="img/icons/arrow.jpg" alt="link">
+							<img src="img/icons/arrow.png" srcset="img/icons/arrow-retina.png 2x" alt="link">
 						</div>
 					</div>
 				</div>
@@ -227,11 +225,11 @@
 							</div>
 							<div class="comparison__item">
 								<img src="img/icons/checkbox.svg" alt="checked">
-								<p class="comparison__text">Опытные специалисты</p>
+								<p class="comparison__text">Штат специалистов</p>
 							</div>
 							<div class="comparison__item">
 								<img src="img/icons/checkbox.svg" alt="checked">
-								<p class="comparison__text">Профессиональное оборудование</p>
+								<p class="comparison__text">Проф. оборудование</p>
 							</div>
 							<div class="comparison__item">
 								<img src="img/icons/checkbox.svg" alt="checked">
@@ -243,15 +241,15 @@
 							</div>
 							<div class="comparison__item">
 								<img src="img/icons/checkbox.svg" alt="checked">
-								<p class="comparison__text">Доступная цена</p>
+								<p class="comparison__text">Индивидуальный подход</p>
 							</div>
-							<div class="comparison__price">
+							<!-- <div class="comparison__price">
 								<p class="comparison__text">
 									от <span class="comparison__price_accent">1900 тенге / 1 ПК</span>
 								</p>
 								<p class="comparison__text">в месяц</p>
-							</div>
-							<a href="#" class="comparison__btn comparison__btn_hover">Бесплатная консультация</a>
+							</div> -->
+							<a href="#" data-target="#feedback" class="comparison__btn comparison__btn_hover scroll-anch">Бесплатная консультация</a>
 						</div>
 						<div class="comparison__card">
 							<div class="comparison__item">
@@ -276,28 +274,28 @@
 									<path
 										d="M21.188 24H2.813A2.816 2.816 0 010 21.187V2.813A2.816 2.816 0 012.813 0h18.375A2.816 2.816 0 0124 2.813v18.375A2.816 2.816 0 0121.187 24zM2.813 1.875a.939.939 0 00-.938.938v18.375c0 .516.42.937.938.937h18.375c.516 0 .937-.42.937-.938V2.813a.939.939 0 00-.938-.937H2.813zm17.385 5.22l-1.396-1.252-8.67 9.683-5.033-4.783L3.807 12.1l6.432 6.115L20.2 7.094z"
 										fill="#DADCE0" /></svg>
-								<p class="comparison__text">Могут переманить конкуренты</p>
+								<p class="comparison__text">Может уйти в другую компанию</p>
 							</div>
 							<div class="comparison__item">
 								<svg width="24" height="24" fill="none" xmlns="http://www.w3.org/2000/svg">
 									<path
 										d="M21.188 24H2.813A2.816 2.816 0 010 21.187V2.813A2.816 2.816 0 012.813 0h18.375A2.816 2.816 0 0124 2.813v18.375A2.816 2.816 0 0121.187 24zM2.813 1.875a.939.939 0 00-.938.938v18.375c0 .516.42.937.938.937h18.375c.516 0 .937-.42.937-.938V2.813a.939.939 0 00-.938-.937H2.813zm17.385 5.22l-1.396-1.252-8.67 9.683-5.033-4.783L3.807 12.1l6.432 6.115L20.2 7.094z"
 										fill="#DADCE0" /></svg>
-								<p class="comparison__text">Может уйти на больничный</p>
+								<p class="comparison__text">Уход на больничный</p>
 							</div>
 							<div class="comparison__item">
 								<svg width="24" height="24" fill="none" xmlns="http://www.w3.org/2000/svg">
 									<path
 										d="M21.188 24H2.813A2.816 2.816 0 010 21.187V2.813A2.816 2.816 0 012.813 0h18.375A2.816 2.816 0 0124 2.813v18.375A2.816 2.816 0 0121.187 24zM2.813 1.875a.939.939 0 00-.938.938v18.375c0 .516.42.937.938.937h18.375c.516 0 .937-.42.937-.938V2.813a.939.939 0 00-.938-.937H2.813zm17.385 5.22l-1.396-1.252-8.67 9.683-5.033-4.783L3.807 12.1l6.432 6.115L20.2 7.094z"
 										fill="#DADCE0" /></svg>
-								<p class="comparison__text">Заработная плата / премии / отпуск</p>
+								<p class="comparison__text">отпуск / соц. отчисления</p>
 							</div>
-							<div class="comparison__price comparison__price_width">
+							<!-- <div class="comparison__price comparison__price_width">
 								<p class="comparison__text">
 									от <span class="comparison__price_gray">150.000 тенге зарплата</span>
 								</p>
 								<p class="comparison__text">в месяц</p>
-							</div>
+							</div> -->
 							<a href="#" class="comparison__btn comparison__btn_gray">Большие расходы</a>
 						</div>
 					</div>
@@ -307,7 +305,7 @@
 				<div class="container">
 					<div class="clients__row">
 						<div class="clients__title">
-							<p class="subtitle">С нами уже работают</p>
+							<p class="subtitle">С нами работают</p>
 							<h1 class="title">
 								Наши
 								<span class="title__accent">клиенты</span>
@@ -335,6 +333,12 @@
 									<div class="swiper-slide">
 										<img src="img/slider/slider-2.jpg" alt="GalaKlinica">
 									</div>
+									<!-- <div class="swiper-slide">
+										<img src="img/slider/slider-7.jpeg" alt="GalaKlinica">
+									</div>
+									<div class="swiper-slide">
+										<img src="img/slider/slider-8.jpeg" alt="GalaKlinica">
+									</div> -->
 								</div>
 							</div>
 							<div class="swiper-button-next"></div>
@@ -344,39 +348,40 @@
 			</div>
 			<div class="services" id="services">
 				<div class="services__row">
-						<a href="/service-pc.html" class="services__item" style="background-image: url(img/services/services-1.jpg);">
-							<span>Обслуживание компьютеров и<br>периферийных устройств</span>
+						<a href="#" data-target="#feedback" class="services__item scroll-anch" style="background-image: url(img/services/services-1.jpg);">
+							<span>Ремонт компьютеров и<br>периферийных устройств</span>
 						</a>
-						<a href="/service-1c.html" class="services__item" style="background-image: url(img/services/services-2.jpg);">
+						<a href="#" data-target="#feedback" class="services__item scroll-anch" style="background-image: url(img/services/services-2.jpg);">
 							<span>Настройка 1с</span>
 						</a>
-						<a href="/service-ip-phone.html" class="services__item" style="background-image: url(img/services/services-3.jpg);">
+						<a href="#" data-target="#feedback" class="services__item scroll-anch" style="background-image: url(img/services/services-3.jpg);">
 							<span>IP телефония</span>
 						</a>
-						<a href="service-network.html" class="services__item" style="background-image: url(img/services/services-4.jpg);">
+						<a href="#" data-target="#feedback" class="services__item scroll-anch" style="background-image: url(img/services/services-4.jpg);">
 							<span>Монтажные работы</span>
 						</a>
-						<a href="service-server.html" class="services__item" style="background-image: url(img/services/services-5.jpg);">
+						<a href="#" data-target="#feedback" class="services__item scroll-anch" style="background-image: url(img/services/services-5.jpg);">
 							<span>Обслуживание серверов</span>
 						</a>
-						<a href="service-printer.html" class="services__item" style="background-image: url(img/services/services-6.jpg);">
+						<a href="#" data-target="#feedback" class="services__item scroll-anch" style="background-image: url(img/services/services-6.jpg);">
 							<span>Заправка</span>
 							<span>Ремонт</span>
 							<span>Картриджей</span>
+							<span>Расходные материалы</span>
 						</a>
 						<a href="https://simpleweb.kz/" target="_blank" class="services__item" style="background-image: url(img/services/services-7.jpg);">
 							<span>Разработка сайтов</span>
 						</a>
-						<a href="service-pc-craft.html" class="services__item" style="background-image: url(img/services/services-8.jpg);">
+						<a href="#" data-target="#feedback" class="services__item scroll-anch" style="background-image: url(img/services/services-8.jpg);">
 							<span>Сборка компьютеров и<br>серверов</span>
 						</a>
-						<a href="service-web-kassa.html" class="services__item" style="background-image: url(img/services/services-9.jpg);">
+						<a href="#" data-target="#feedback" class="services__item scroll-anch" style="background-image: url(img/services/services-9.jpg);">
 							<span>Web-касса и торговое оборудование</span>
 						</a>
 					</a>
 				</div>
 			</div>
-			<div class="feedback">
+			<div class="feedback" id="feedback">
 				<div class="container">
 					<div class="feedback__row">
 						<div class="feedback__map">
@@ -388,7 +393,7 @@
 								Сообщение успешно отправлено!
 							</div>
 						</div>
-						<form class="feedback__form">
+						<form class="feedback__form form" method="POST" action="telegram.php">
 							<div class="feedback__title">
 								<h1 class="title">Давайте <span class="title__accent">обсудим</span></h1>
 							</div>
