--- a/src/parts/scripts.html
+++ b/src/parts/scripts.html
@@ -1,4 +1,5 @@
  <section>
 	<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
  	<script src="js/common.js"></script>
  </section>
