--- a/src/service-web-kassa.html
+++ b/src/service-web-kassa.html
@@ -53,7 +53,7 @@
                     <img src="img/icons/group.png" alt="All">
                     Все услуги
                   </div>
-                  <img src="img/icons/arrow.jpg" alt="link">
+                  <img src="img/icons/arrow.png" srcset="img/icons/arrow-retina.png 2x" alt="link">
                 </a>
               </li>
             </ul>
